--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.34.0",
     "axios": "^0.27.2",
-    "react-query": "^4.0.0"
+    "@tanstack/react-query": "^4.0.10"
   },
   "devDependencies": {
     "@types/node": "18.6.4",
