--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.34.0",
     "axios": "^0.27.2",
-    "@tanstack/react-query": "^4.0.10"
+    "cookie": "^0.5.0"
   },
   "devDependencies": {
     "@types/node": "18.6.4",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
+    "@types/cookie": "^0.5.1",
     "eslint": "8.21.0",
     "eslint-config-next": "12.2.4",
     "typescript": "4.7.4",
